[package]
name = "ragent_core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A framework for building LLM agents."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["bevy"]
bevy = ["dep:bevy"]

[dependencies]
documented = "0.1.2"
bevy = { version = "0.13.0", default-features = false, optional = true }
serde = { version = "1.0.149", features = ["derive"] }
prost = "0.12.1"
uuid = { version = "1.2.2", features = ["v4"] }
blake3 = { version = "1.5.1", features = ["pure"] }